# ai-tp-os

./: .env.example  .gitignore  Dockerfile  FINAL_REPAIR_REPORT.md  PROJECT_ANALYSIS.md  README.md  REPAIR_REPORT.md  ai-tp-config.json  ai-tp-config.yaml  docker-compose.yml  pyproject.toml  start.sh  test_all_fixed.py
.devcontainer/: devcontainer.json
apps/starter_ai_agents/ai_meme_generator/: app.py
apps/starter_ai_agents/ai_music_generator/: app.py
apps/starter_ai_agents/ai_travel_agent/: app.py
core/: cli.py
core/compute/: ollama_client.py
core/config/: settings.py
core/network/: manager.py
core/storage/: unified_storage.py
scripts/: cli.py  entrypoint.sh
