[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-tp-os"
version = "0.1.0"
description = "AI-TP OS: AI-Native Decentralized OS with 100+ LLM Apps"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "AI-TP OS Team"},
]
keywords = ["ai", "llm", "agent", "rag", "decentralized", "p2p", "os"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # LLM / AI 核心
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    "google-generativeai>=0.7.0",
    "ollama>=0.2.0",
    "litellm>=1.40.0",
    
    # Agent 框架
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "crewai>=0.30.0",
    "autogen>=0.2.0",
    
    # RAG
    "chromadb>=0.5.0",
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=3.0.0",
    "pypdf>=4.0.0",
    "unstructured>=0.14.0",
    
    # 向量数据库
    "qdrant-client>=1.9.0",
    "weaviate-client>=4.0.0",
    
    # Web / API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "streamlit>=1.35.0",
    "gradio>=4.0.0",
    "flask>=3.0.0",
    
    # 数据处理
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    
    # 存储
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "aiosqlite>=0.20.0",
    
    # 网络 / P2P
    "libp2p>=0.2.0; python_version >= '3.10'",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    
    # 工具
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "click>=8.1.0",
    "jinja2>=3.1.0",
    "requests>=2.32.0",
    
    # 安全
    "cryptography>=42.0.0",
    "pyjwt>=2.8.0",
    
    # 测试
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    
    # 监控
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

voice = [
    "openai-whisper>=20231117",
    "speechrecognition>=3.10.0",
    "pyttsx3>=2.90",
    "pydub>=0.25.0",
]

vision = [
    "pillow>=10.3.0",
    "opencv-python>=4.9.0",
    "transformers>=4.41.0",
    "torch>=2.3.0",
    "torchvision>=0.18.0",
]

all = [
    "ai-tp-os[dev,voice,vision]",
]

[project.scripts]
ai-tp = "core.cli:main"
ai-tp-init = "scripts.init:main"
ai-tp-run = "scripts.run_app:main"
ai-tp-model = "scripts.model_manager:main"

[project.urls]
Homepage = "https://github.com/ghshhf/ai-tp-os"
Documentation = "https://github.com/ghshhf/ai-tp-os/docs"
Repository = "https://github.com/ghshhf/ai-tp-os"

[tool.hatch.build.targets.wheel]
packages = ["core", "apps", "scripts"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
