[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-tp-os"
version = "0.1.0"
description = "AI-TP OS: AI-Native Decentralized OS with 100+ LLM Apps"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "AI-TP OS Team"},
]
keywords = ["ai", "llm", "agent", "rag", "decentralized", "p2p", "os"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # 应用层（可选，按需安装）
    "streamlit>=1.35.0",         # Web UI (3 个 starter agents)
]

[project.optional-dependencies]
# 开发工具
dev = [
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
]

# 高级 CLI (core/cli.py 使用 typer+rich，替代 scripts/cli.py 的 argparse)
cli-rich = [
    "typer>=0.12.0",
    "rich>=13.7.0",
]

# 云推理后端 (按需启用)
cloud-openai = [
    "openai>=1.30.0",
]
cloud-anthropic = [
    "anthropic>=0.28.0",
]
cloud-gemini = [
    "google-generativeai>=0.7.0",
]

# RAG (未来实现)
rag = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "pypdf>=4.0.0",
]

# Redis 存储后端 (未来实现)
redis-backend = [
    "redis>=5.0.0",
]

all = [
    "ai-tp-os[dev,cli-rich,cloud-openai,cloud-anthropic,cloud-gemini,rag,redis-backend]",
]

[project.scripts]
ai-tp = "core.cli:main"
ai-tp-init = "scripts.init:main"
ai-tp-run = "scripts.run_app:main"
ai-tp-model = "scripts.model_manager:main"

[project.urls]
Homepage = "https://github.com/ghshhf/ai-tp-os"
Documentation = "https://github.com/ghshhf/ai-tp-os/docs"
Repository = "https://github.com/ghshhf/ai-tp-os"

[tool.hatch.build.targets.wheel]
packages = ["core", "apps", "scripts"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
